# androidpp

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  PlatformAll.cmake  PlatformAndroid.cmake  PlatformWindows.cmake  README.md  assert
android/: CMakeLists.txt
android/android/content/: CMakeLists.txt  Context.cpp  Context.h  ContextWrapper.cpp  ContextWrapper.h
android/android/content/res/: CMakeLists.txt  Configuration.cpp  Configuration.h  Resources.cpp  Resources.h
android/android/graphics/: Bitmap.cpp  Bitmap.h  CMakeLists.txt  Point.h  PointF.h  Rect.h  RectF.h
android/android/media/: AudioFormat.h  AudioTrack.cpp  AudioTrack.h  CMakeLists.txt  MediaFormat.cpp  MediaFormat.h  MediaPlayer.cpp  MediaPlayer.h
android/android/media/appkit/: AudioFile.cpp  AudioFile.h  CMakeLists.txt  MediaSurface.cpp  MediaSurface.h
android/android/opengl/: CMakeLists.txt  GLSurfaceView.cpp  GLSurfaceView.h
android/android/opengl/appkit/: CMakeLists.txt  EGLOffscreenContext.cpp  EGLOffscreenContext.h  EGLPbufferSurface.cpp  EGLPbufferSurface.h  GLExtensions.cpp  GLExtensions.h  GLTexture.cpp  GLTexture.h  GLTextureHandle.cpp  GLTextureHandle.h  GLTextureStreamChannel.cpp  GLTextureStreamChannel.h  GLTextureStreamChannelMessages.h  GLTextureStreamHost.cpp  GLTextureStreamHost.h  GLTextureStreamHostMessages.h  GLTransportSurface.cpp  GLTransportSurface.h
android/android/os/: Bundle.cpp  Bundle.h  CMakeLists.txt  Handler.cpp  Handler.h  IBinder.h  Looper.cpp  Looper.h  Message.cpp  Message.h  Messenger.cpp  Messenger.h  Parcel.h
android/android/os/appkit/: CMakeLists.txt  MessageChannel.cpp  MessageChannel.h  MessageChannelMessages.h  MessageFilter.h  MessageHost.cpp  MessageHost.h  MessageHostMessages.h  Messages.h  Process.cpp  Process.h  ProcessLauncher.cpp  ProcessLauncher.h  ProcessMessages.h  Thread.cpp  Thread.h
android/android/util/: CMakeLists.txt  DisplayMetrics.h  Log.cpp  Log.h
android/android/view/: CMakeLists.txt  InputDevice.h  InputEvent.h  KeyEvent.h  Menu.h  MenuItem.h  MotionEvent.h  View.cpp  View.h  ViewGroup.cpp  ViewGroup.h
android/android/view/appkit/: CMakeLists.txt  CompositionClause.h  ContentFrame.cpp  ContentFrame.h  ContentView.cpp  ContentView.h  Cursor.h  EditableContext.h  EditableContextInputConnection.cpp  EditableContextInputConnection.h  MotionDetector.cpp  MotionDetector.h  RenderContext.h  RenderContextList.cpp  RenderContextList.h  UIEvent.h  UIKeyEvent.h  UIMouseEvent.h  UIWheelEvent.h  ViewContext.h  VirtualKeyMap.h
android/android/view/inputmethod/: BaseInputConnection.cpp  BaseInputConnection.h  CMakeLists.txt  CursorAnchorInfo.h  EditorInfo.h  InputConnection.h  InputMethodManager.cpp  InputMethodManager.h
android/android/widget/: CMakeLists.txt  PopupMenu.cpp  PopupMenu.h
android/java/: lang.h
android/java/lang/: CMakeLists.txt  CharSequence.h  Object.h  StringInlines.h  System.h
android/java/lang/win/: SystemWin.cpp
private/: CMakeLists.txt
private/android/content/: CMakeLists.txt  ContextPrivate.cpp  ContextPrivate.h
private/android/media/: AudioTrackPrivate.cpp  AudioTrackPrivate.h  CMakeLists.txt  MediaPlayerPrivate.cpp  MediaPlayerPrivate.h
private/android/media/appkit/: AudioFilePrivate.cpp  AudioFilePrivate.h  CMakeLists.txt
private/android/media/appkit/win/: AudioFilePrivateMediaFoundationWin.cpp  AudioFilePrivateMediaFoundationWin.h
private/android/media/mock/: MediaPlayerPrivateMock.cpp  MediaPlayerPrivateMock.h
private/android/media/win/: AudioTrackPrivateXAudio2Win.cpp  AudioTrackPrivateXAudio2Win.h  DataSourceProviderByteStream.cpp  DataSourceProviderByteStream.h  XAudio2AudioDevice.cpp  XAudio2AudioDevice.h
private/android/opengl/: CMakeLists.txt  EGL.h
private/android/opengl/GLES2/: esShader.cpp  esShapes.cpp  esUtil.cpp  esUtil.h  esUtil_win.h
private/android/opengl/GLES2/Win32/: esUtil_win32.cpp
private/android/opengl/appkit/: CMakeLists.txt
private/android/opengl/appkit/win/: EGLPbufferSurfaceANGLEWin.cpp
private/android/os/: BundlePrivate.h  BundlePrivateJSON.cpp  CMakeLists.txt  HandlerProvider.h  MessageTarget.cpp  MessageTarget.h
private/android/os/appkit/: CMakeLists.txt
private/android/os/appkit/win/: MainWin.cpp  ProcessLauncherWin.cpp  ProcessWin.cpp  ThreadWin.cpp
private/android/os/win/: HandlerProviderWin.cpp  HandlerProviderWin.h  LooperWin.cpp  MessageCopyData.h  MessageTargetWin.cpp
private/android/util/: CMakeLists.txt
private/android/util/win/: DisplayMetricsWin.cpp  LogWin.cpp
private/android/view/: CMakeLists.txt  KeyEventPrivate.h  MotionEventPrivate.h  ViewHostWindow.cpp  ViewHostWindow.h  ViewPrivate.cpp  ViewPrivate.h  WindowHandle.h  WindowProvider.cpp  WindowProvider.h
private/android/view/appkit/: CMakeLists.txt
private/android/view/appkit/win/: CursorWin.cpp  CursorWin.h
private/android/view/inputmethod/: InputConnectionPrivate.h
private/android/view/win/: MenuWin.cpp  MenuWin.h  WindowProviderWin.cpp  WindowProviderWin.h
private/android/widget/: CMakeLists.txt
private/android/widget/win/: PopupMenuWin.cpp  PopupMenuWin.h
